[project]
name = "request-cognito-oauth-token"
description = "A small python module and CLI to quickly get a JSON Web Token (JWT) from an OAuth 2.0 token endpoint activated using AWS Cognito."
dependencies = [
    "pydantic==2.4.2",
    "boto3",
    "boto3-stubs[cognito-idp,cognito-identity]",
    "requests==2.31.0",
    "fire==0.5.0"
]
dynamic = ["version"]

[build-system]
requires = ["flit>=3.2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "request_cognito_oauth_token"